Resolves: tdf#97193 restore pre 5-1 values for INS_INSROWS and INS_INSCOLS

i.e. INS_INSCOLS_BEFORE and INS_INSROWS_BEFORE have the same
meaning as the old INS_INSROWS and INS_INSCOWS, so reorder the enum
so they are at the positions of their corresponding originals.

This makes macros recorded before 5-1 work like they did prior to 5-1-0.
This unfortunately will have the same effect to macros recorded during
the 5-1 period that the original change did.

regression since...

commit f97beeef352fdd9fd4f157a7a4c4f6af8341cbe6
Date:   Wed May 20 16:54:27 2015 +0200

    Calc: Insert row/col before/after [1/2]

    This part renames all INSROW / INSCOL to
    INSROWS_BEFORE / INSCOLS_BEFORE which is
    the current (default) behaviour.

Change-Id: Ide90b8cfebe4af1a3718d93c34657663c20ccc62
(cherry picked from commit 7ec4a495291c7427bba5256bf2c54f1da999ea52)