sc/inc/global.hxx
@@ -271,10 +271,10 @@ enum InsCellCmd
         INS_CELLSDOWN,
         INS_CELLSRIGHT,
         INS_INSROWS_BEFORE,
-        INS_INSROWS_AFTER,
         INS_INSCOLS_BEFORE,
-        INS_INSCOLS_AFTER,
-        INS_NONE
+        INS_NONE,
+        INS_INSROWS_AFTER,
+        INS_INSCOLS_AFTER
     };
 
 enum UpdateRefMode
